--- a/src/app/Components/groups/groups.component.html
+++ b/src/app/Components/groups/groups.component.html
@@ -3,20 +3,17 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-header bg-dark text-light p-4">
-                        <h4 class="card-title text-right ">إنشاء مجموعه جديده و إدراج صلاحياتها</h4>
+                    <div class="card-header text-light p-3 address">
+                        <h4 class="card-title text-center">إنشاء مجموعه جديده و إدراج صلاحياتها</h4>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body fs-5">
                       <form action="post" [formGroup]="GroupAuthForm" (submit)="AddNewGroup($event)">
 
                         <div class="row ">
                           <div class="col">
-                              <label for="GroubName">إسم المجموعة</label><br>
-                              <input type="input" class="form-control " id="name"
-                                  aria-describedby="emailHelp" placeholder="الإسم" formControlName="name">
-                              <small id="emailHelp" class="form-text text-muted">
-                                  إدراج أسم للمجموعه
-                              </small>
+                              <label class="py-2" for="GroubName">إسم المجموعة</label><br>
+                              <input type="input" class="form-control" id="name"
+                                  aria-describedby="emailHelp" formControlName="name">
                               <ng-container *ngIf="groupName.touched">
                                   <div *ngIf="groupName.hasError('required')">
                                       <p class="text-danger"> بالرجاء إدخال إسم المستخدم</p>
@@ -30,18 +27,18 @@
                         </div>
                         <div class="row">
                           <div class="col mb-3">
-                              <div class="ms-1">
+                              <div class="ms-1 py-2">
                                   <input class="form-check-input" type="checkbox" value="all" id="all" formControlName="all">
-                                  <label class="form-check-label px-2  text-primary" for="all" form-control="defaultCheck">
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="all" form-control="defaultCheck">
                                       إعطاء المجموعه جميع الصلاحيات
                                   </label>
                               </div>
                               </div>
 
                           <div class="col mb-3">
-                              <div class="ms-1">
+                              <div class="ms-1 py-2">
                                   <input class="form-check-input" type="checkbox" value="academyinnumber" id="academyinnumber" formControlName="academyinnumber">
-                                  <label class="form-check-label px-3  text-primary" for="academyinnumber" >
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="academyinnumber" >
                                       الأكاديمية فى أرقام
                                   </label>
                               </div>
@@ -53,7 +50,7 @@
                           <div class="col mb-3">
                               <div class="ms-1">
                                   <input class="form-check-input" type="checkbox" value="users" id="users" formControlName="users">
-                                  <label class="form-check-label px-3 text-primary" for="users">
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="users">
                                       المستخدمين
                                   </label>
                               </div>
@@ -62,7 +59,7 @@
                           <div class="col mb-3">
                               <div class="ms-1">
                                   <input class="form-check-input" type="checkbox" value="Groups" id="Groups" formControlName="Groups">
-                                  <label class="form-check-label px-2 text-primary" for="Groups">
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="Groups">
                                       المجموعات
                                   </label>
                               </div>
@@ -75,7 +72,7 @@
                           <div class="col mb-3">
                               <div class="ms-1">
                                   <input class="form-check-input" type="checkbox" value="branches" id="branches" formControlName="branches">
-                                  <label class="form-check-label px-2  text-primary" for="branches">
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="branches">
                                       الفروع
                                   </label>
                               </div>
@@ -84,7 +81,7 @@
                           <div class="col mb-3">
                               <div class="ms-1">
                                   <input class="form-check-input" type="checkbox" value="Courses" id="Courses" formControlName="Courses">
-                                  <label class="form-check-label px-2 text-primary" for="Courses">
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="Courses">
                                       الكورسات
                                   </label>
                               </div>
@@ -95,7 +92,7 @@
                           <div class="col mb-3">
                               <div class="ms-1">
                                   <input class="form-check-input" type="checkbox" value="Subject" id="Subject" formControlName="Subject">
-                                  <label class="form-check-label px-3 text-primary" for="Subject">
+                                  <label class="form-check-label px-3 fs-5 text-primary" for="Subject">
                                       المواد
                                   </label>
                               </div>
@@ -103,7 +100,7 @@
                           <div class="col mb-3">
                               <div class="ms-1">
                                   <input class="form-check-input" type="checkbox" value="Student" id="Student" formControlName="Student">
-                                  <label class="form-check-label px-2  text-primary" for="Student">
+                                  <label class="form-check-label px-2 fs-5 text-primary" for="Student">
                                       الطلاب
                                   </label>
                               </div>
@@ -112,8 +109,8 @@
                         </div>
 
 
-                      <button *ngIf="!isEdit" type="submit" class="btn btn-primary float-start"  (click)="addNewGroup()">حفظ إلى جدول المجموعات </button>
-                      <button *ngIf="isEdit" type="submit" class="btn btn-warning float-start" (click)="saveUpdate()">تعديل إلى جدول المجموعات </button>
+                      <button *ngIf="!isEdit" type="submit" class="float-start save"  (click)="addNewGroup()">اضافه </button>
+                      <button *ngIf="isEdit" type="submit" class="float-start save" (click)="saveUpdate()">حفظ التعديل </button>
                   </form>
                     </div>
                 </div>
@@ -223,7 +220,7 @@
     </div>-->
     <p class="p-3 d-flex justify-content-start">
       <button
-        class="btn btn-primary p-3 fs-4"
+        class="btn btn-primary p-3 fs-4 show"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#collapseExample"
@@ -241,49 +238,39 @@
               <div class="col-md-12">
                 <div class="card-body">
                   <div class="table-responsive">
-                      <table class="table text-center table-striped border border-1">
-                          <thead class=" text-primary">
-                              <th>
-                                  الأسم
-                              </th>
-                              <th>
-                                  الأكاديمية فى أرقام
-                              </th>
-                              <th>
-                                  المجموعات
-                              </th>
-                              <th>
-                                  المستخدمين
-                              </th>
-                              <th>
-                                  الفروع
-                              </th>
-                              <th>
-                                  الكورسات
-                              </th>
-                              <th>
-                                  المواد
-                              </th>
-                              <th colspan="3">
-                                  الطلاب
-                              </th>
-                              <th>
-                                  الرقم المميز
-                              </th>
-                              <th>
-                                 حذف
-                              </th>
-                              <th>
-                                  تعديل
-                               </th>
-                          </thead>
+                    <table class="table text-center table table-striped table-hover Tabletext">
+                      <thead>
+                        <tr>
+                        <th>الأسم</th>
+                        <th>الأكاديمية فى أرقام</th>
+                        <th> المجموعات</th>
+                        <th> المجموعات</th>
+                        <th>
+                          الفروع
+                      </th>
+                      <th>
+                          الكورسات
+                      </th>
+                      <th>
+                          المواد
+                      </th>
+                      <th colspan="3">
+                          الطلاب
+                      </th>
+                      <th>
+                          الرقم المميز
+                      </th>
+                        <th>تعديل</th>
+                        <th>حذف</th>
+                        </tr>
+                      </thead>
+
                           <tbody>
                               <tr *ngFor="let ch of groups">
                                   <td>
                                       {{ch.groupName}}
                                   </td>
                                   <td>
-
 
                                       {{ch.academyInNumbersPage}}
                                   </td>
@@ -315,15 +302,15 @@
                                   <td>
                                       {{ch.groupId}}
                                   </td>
-                                  <td>
-                                    <button class="btn btn-danger"  (click)="DeleteGroup(ch.groupId)">
-                                      <i class="bi bi-trash3-fill"></i>
 
-                                  </button>
-                                  </td>
                                   <td>
                                       <button class="btn btn-warning"  (click)="EditGroup(ch.groupId)">
                                           <i class="bi bi-pencil-square text-light"></i>
+                                    </button>
+                                    </td>
+                                    <td>
+                                      <button class="btn btn-danger"  (click)="DeleteGroup(ch.groupId)">
+                                        <i class="bi bi-trash3-fill"></i>
 
                                     </button>
                                     </td>
