--- a/src/app/Components/branches/branches.component.html
+++ b/src/app/Components/branches/branches.component.html
@@ -4,10 +4,10 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card">
-            <div class="card-header card-header-danger">
+            <div class="card-header card-header-danger text-light address">
               <h4 class="card-title text-center">إضافة فرع خاص بالاكاديميه</h4>
             </div>
-            <div class="card-body text-right">
+            <div class="card-body text-right fs-5">
               <form [formGroup]="branchForm" (submit)="formHandelr($event)">
                 <div class="row">
                   <div class="col mb-3">
@@ -142,14 +142,14 @@
                     </ng-container>
                 </div>
                 </div>
-                <button class="btn btn-primary ms-2 float-start" (click)="back()">
+                <button class="btn btn-primary ms-2 float-start back" (click)="back()">
                   تراجع
                 </button>
 
                 <button
                   *ngIf="!isEdit"
                   [disabled]="!branchForm.valid"
-                  class="btn btn-danger ms-2 float-start"
+                  class="btn btn-danger ms-2 float-start save"
                   (click)="AddBranch()"
                 >
                   اضافة
@@ -157,7 +157,7 @@
                 <button
                   *ngIf="isEdit"
                   [disabled]="!branchForm.valid"
-                  class="btn ms-2 float-start color"
+                  class="btn ms-2 float-start color save"
                   (click)="saveUpdate()"
                 >
                   حفظ
@@ -242,7 +242,7 @@
 </div>-->
 <p class="p-3 d-flex justify-content-start">
   <button
-    class="btn btn-primary p-3 fs-4"
+    class="btn btn-primary p-3 fs-4 show"
     type="button"
     data-bs-toggle="collapse"
     data-bs-target="#collapseExample"
@@ -260,8 +260,9 @@
           <div class="col-md-12">
             <div class="card-body">
               <div class="table-responsive">
-                <table class="table text-center">
-                  <thead class="text-primary">
+                <table class="table text-center table table-striped table-hover">
+                  <thead>
+                    <tr>
                     <th>م</th>
                     <th>اسم الفرع</th>
                     <th>اسم مشرف الفرع</th>
@@ -269,6 +270,7 @@
                     <th>التليفون الارضي</th>
                     <th>تعديل</th>
                     <th>حذف</th>
+                    </tr>
                   </thead>
                   <tbody>
                     <tr *ngFor="let branch of branches; let i = index">
@@ -287,25 +289,16 @@
                       <td>
                         {{ branch.supervisorLandlineNumber }}
                       </td>
+
                       <td>
-                        <button
-                          mat-raised-button
-                          type="submit"
-                          class="btn btn-danger"
-                          (click)="EditBranch(branch.id)"
-                        >
-                          تعديل
-                        </button>
+                        <button class="btn btn-warning"   (click)="EditBranch(branch.id)">
+                            <i class="bi bi-pencil-square text-light"></i>
+                      </button>
                       </td>
                       <td>
-                        <button
-                          mat-raised-button
-                          type="submit"
-                          (click)="DeleteBranch(branch.id)"
-                          class="btn btn-danger"
-                        >
-                          حذف
-                        </button>
+                        <button class="btn btn-danger"  (click)="DeleteBranch(branch.id)">
+                          <i class="bi bi-trash3-fill"></i>
+                      </button>
                       </td>
                     </tr>
                   </tbody>
