--- a/src/app/Components/student-course/student-course.component.html
+++ b/src/app/Components/student-course/student-course.component.html
@@ -4,10 +4,10 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card">
-            <div class="card-header card-header-danger">
-              <h4 class="card-title text-center">إضافة كورس للطالب</h4>
+            <div class="card-header card-header-danger text-white address ">
+              <h4 class="card-title text-center ">إضافة كورس للطالب</h4>
             </div>
-            <div class="card-body text-right">
+            <div class="card-body text-righ fs-5">
               <form
                 (submit)="formHandler($event)"
                 [formGroup]="studentCourseForm"
@@ -107,12 +107,12 @@
                     </div>
                   </ng-container>
                 </div>
-                <button (click)="back()"class="btn btn-primary ms-2 float-start">
+                <button (click)="back()"class="btn btn-primary ms-2 float-start back">
                   تراجع
                 </button>
                 <button
                   [disabled]="!studentCourseForm.valid"
-                  class="btn btn-primary ms-2 float-start"
+                  class="btn btn-primary ms-2 float-start save"
                   (click)="addStudentCourse()"
                 >
                   اضافة
@@ -231,7 +231,7 @@
   </div>-->
         <p class="p-3 d-flex justify-content-start">
           <button
-            class="btn btn-primary p-3 fs-4"
+            class="btn p-3 fs-4 show"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#collapseExample"
@@ -249,7 +249,7 @@
                   <div class="col-md-12">
                     <div class="card-body">
                       <div class="table-responsive">
-                        <table class="table text-center">
+                        <table class="table text-center table table-striped table-hover Tabletext">
                           <thead class="text-primary">
                             <th>م</th>
                             <th>اسم الطالب</th>
@@ -289,7 +289,7 @@
         </div>
         <p class="p-3 d-flex justify-content-start">
           <button
-            class="btn btn-primary p-3 fs-4"
+            class="btn btn-primary p-3 fs-4 show"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#collapseExample"
@@ -307,7 +307,7 @@
                   <div class="col-md-12">
                     <div class="card-body">
                       <div class="table-responsive">
-                        <table class="table text-center">
+                        <table class="table text-center table table-striped table-hover Tabletext">
                           <thead class="text-primary">
                             <th>م</th>
                             <th>اسم الكورس</th>
