--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -12,6 +12,14 @@
                 </a>
                 </li>
                 <li class="nav-item">
+                  <a [routerLink]="['/login']" class="nav-link align-middle px-0 text-light">
+                      <div class="d-flex justify-content-around">
+                          <i class=" fs-4 bi bi-person ms-2"></i>
+                          <span class="ms-2 d-none d-sm-inline fs-5 ">تسجل الدخول</span>
+                      </div>
+                  </a>
+              </li>
+                <li class="nav-item">
                     <a [routerLink]="['/groups']" class="nav-link align-middle px-0 text-light">
                         <div class="d-flex justify-content-around">
                             <i class=" fs-4 bi bi-person-lines-fill ms-2"></i>
