--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div>
     <div class="row flex-nowrap ">
-      <div class="col-auto col-md-3 col-xl-10 px-sm-2 px-0   test">
+      <div class="col-md-3 col-xl-10 px-sm-2 px-0 test">
          <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white">
              <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                  <span class="fs-5 d-none d-sm-inline">Menu</span>
