--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,16 @@
-
 <div class="container-fluid mb-0">
-  <div class="row flex-nowrap">
-    <div class="col-md-9 py-3">
-      <div class="container-fluid route">
-     <router-outlet></router-outlet>
-
+  <div class="row d-flex justify-content-between">
+  
+    <div class="col-2 vh-100 ">
+      
+        <app-sidebar></app-sidebar>
+      
+    </div>
+    <div class="col-10">
+      <div class=" route mt-3">
+        <router-outlet></router-outlet>
       </div>
     </div>
 
-    <div class="col-auto col-xl-2 px-sm-2 px-0  vh-100" style="order: -1;">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3  text-white mb-0">
-      <app-sidebar></app-sidebar>
-      </div>
-    </div>
   </div>
 </div>
