--- a/src/app/Components/payments/payments.component.html
+++ b/src/app/Components/payments/payments.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div class="container">
     <div class="main-content">
       <div class="container-fluid">
         <div class="row">
@@ -24,11 +24,11 @@
 
                     </ng-container>
                   </div>
-                 <ng-container  *ngFor="let branche of branchs">
+                 <ng-container >
                   <div class="mb-3">
                     <label for="studentNameSelected" class="form-label">اختر الاسم</label>
                     <select id="studentNameSelected"  (change)="GetTranieeCourses()" class="form-select" formControlName="studentNameSelected">
-                        <option [value]="tranieesBybranch.traineeId" >{{tranieesBybranch.arabicFullName}}</option>
+                        <option *ngFor="let tranieesBybranch of tranieesBybranch"[value]="tranieesBybranch.traineeId" >{{tranieesBybranch.arabicFullName}}</option>
                     </select>
                     <ng-container *ngIf="getstudentNameSelected.touched" >
                         <div *ngIf="getstudentNameSelected.hasError('required')" id="studentNameSelected" class="form-text text-danger  w-75">
@@ -169,7 +169,9 @@
                     <td>{{trainsactionData.receivedMoneyAmount}}</td>
                     <td>{{trainsactionData.dashboardUser}}</td>
                     <td>{{trainsactionData.notes}}</td>
-                    <td>حذف</td>
+                    <td> 
+                      <button class="btn btn-danger" (click)="Delete(trainsactionData.transactionId)">
+                      <i class="bi bi-trash3-fill"></i>حذف</button>
                   </tr>
                 </tbody>
               </table>
@@ -180,4 +182,4 @@
     </div>
   </div>
   </div>
- -->
+
