--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,1 +1,22 @@
-<p>home works!</p>
+<section class="w-100 d-flex justify-content-center">
+  <div class="row align-items-center">
+    <div class="test d-flex">
+      <div class="col-md-5 co mt-2 text-center d-flex align-items-center justify-content-center">
+        <div class="p-5">
+          <h1 class="fw-bold">
+            مرحبا بك في الأكاديميه<br/>
+          </h1>
+          <p class="fs-5"> نسهل عليك إدارة الأكاديمية حفظ بيانات كل من الطلاب والمستخدمين والفروع وكل من الدورات والمواد التي تقدمها الأكاديمية للطلاب </p>
+
+        </div>
+      </div>
+      <img src="../../../assets/images/home.jpeg" class="img" alt="...">
+      </div>
+    </div>
+</section>
+<!-- <section class="flex-container">
+  <p class="fs-5"> نسهل عليك إدارة الأكاديمية حفظ بيانات كل من الطلاب والمستخدمين والفروع وكل من الدورات والمواد التي تقدمها الأكاديمية للطلاب </p>
+  <img src="../../../assets/images/home.jpeg" class="img" alt="...">
+</section> -->
+
+
