--- a/src/app/Components/students/students.component.css
+++ b/src/app/Components/students/students.component.css
@@ -1,4 +1,4 @@
-.ss{
+/* .ss{
   padding: 10px;
 }
 .ss:hover {
@@ -72,4 +72,11 @@ input:hover,select:hover{
 .Tabletext{
   color: #30475E;
   font-size: 20px;
+} */
+.card{
+  box-shadow: 2px 2px 2px 2px rgb(203, 201, 201);
+  /* background-color: #EEEEEE; */
+}
+.address{
+  background-color: #30475E;
 }
