--- a/src/app/Components/branches/branches.component.html
+++ b/src/app/Components/branches/branches.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
           <div class="card mb-5">
                <div class="card-header card-header-danger text-white address">
-                <h2 class="text-center">عرض فروع الاكاديمية</h2>
+                <h2 class="text-center"> الفروع</h2>
          </div>
             <div class="table-responsive Rebresentive p-4">
               <table class="table  table-striped ">
