--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -7,12 +7,25 @@
     <div class="mt-5 ">
         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
             <li class="nav-item   " [hidden]="!GroupsPagePower" >
+                <a [routerLink]="['/home']"
+                [routerLinkActive]="' test px-3'"
+                [routerLinkActiveOptions]="{exact:true}"
+                 class="nav-link align-middle ">
+ <div class="d-flex justify-content-around">
+      <i class=" fs-4 bi bi-house-check-fill ms-2"></i>
+         <span class="ms-2 d-none d-sm-inline fs-5 ">الرئيسية</span>
+                   </div>
+          </a>
+     </li>
+            
+            
+            <li class="nav-item   " [hidden]="!GroupsPagePower" >
                     <a [routerLink]="['/groups']"
                     [routerLinkActive]="' test px-3'"
                     [routerLinkActiveOptions]="{exact:true}"
                      class="nav-link align-middle ">
      <div class="d-flex justify-content-around">
-          <i class=" fs-4 bi bi-person-lines-fill ms-2"></i>
+          <i class=" fs-4 bi bi-people-fill ms-2"></i>
              <span class="ms-2 d-none d-sm-inline fs-5 ">المجموعات</span>
                        </div>
               </a>
@@ -24,7 +37,7 @@
   [routerLinkActiveOptions]="{exact:true}"
   class="nav-link align-middle ">
   <div class="d-flex justify-content-around">
-  <i class=" fs-4 bi bi-people-fill ms-2"></i>
+  <i class=" fs-4 bi bi-person-lines-fill ms-2"></i>
   <span class="ms-2 d-none d-sm-inline fs-5 ">المستخدمين</span>
   </div>
   </a>
@@ -35,7 +48,7 @@
   [routerLinkActiveOptions]="{exact:true}"
   class="nav-link align-middle ">
   <div class="d-flex justify-content-around">
-  <i class=" fs-4 bi  bi-three-dots ms-2"></i>
+  <i class=" fs-4 bi  bi-geo-alt-fill ms-2"></i>
   <span class="ms-2 d-none d-sm-inline fs-5 ">الفروع</span>
   </div>
   </a>
@@ -72,18 +85,18 @@
   <li> <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
   <i class="fs-4 bi-grid ms-2"></i> <span class="ms-2 d-none d-sm-inline fs-5">الطلاب</span> </a>
   <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-  <li class="w-100"> <a 
+  <li class="w-100 "> <a 
       [routerLink]="['/students']" 
       [routerLinkActive]="' test '"
   [routerLinkActiveOptions]="{exact:true}"
-      class="nav-link px-0"> 
+      class="nav-link px-0 bi bi-person-add"> 
       اضافه طالب
   </a> </li>
   <li class="w-100   "> <a 
       [routerLink]="['/studentcourse']" 
       [routerLinkActive]="' test '"
   [routerLinkActiveOptions]="{exact:true}"
-      class="nav-link px-0"> 
+      class="nav-link px-0 bi bi-file-earmark-plus-fill"> 
       اضافه كورس
   </a> </li>
   
@@ -91,7 +104,7 @@
   <a  [routerLink]="['/payments']" 
   [routerLinkActive]="' test '"
   [routerLinkActiveOptions]="{exact:true}"
-  class="nav-link px-0 ">
+  class="nav-link px-0 bi bi-credit-card-2-back-fill ">
   المدفوعات
   </a>
   </li>                                
