--- a/src/app/Components/payments/payments.component.html
+++ b/src/app/Components/payments/payments.component.html
@@ -6,27 +6,35 @@
           <div class="card mb-5">
             <div class="card-header text-white address">
               <h2 class="text-center">كشف حساب بالكورسات</h2>
-</div>
+            </div>
             <div class="table-responsive Rebresentive p-4">
               <table class="table table-striped">
                 <thead>
                   <tr class="text-center">
-                  <th scope="col" class="p-3">م</th>
-                  <th scope="col" class="p-3">اسم الكورس</th>
-                  <th scope="col" class="p-3">التكلفه الاجماليه للكورس</th>
-                  <th scope="col" class="p-3">المبلغ المدفوع حتى الان</th>
-                  <th scope="col" class="p-3">المبلغ المتبقى</th>
-                  <th scope="col" class="p-3">الحالة</th>
+                    <th scope="col" class="p-3">م</th>
+                    <th scope="col" class="p-3">اسم الكورس</th>
+                    <th scope="col" class="p-3">التكلفه الاجماليه للكورس</th>
+                    <th scope="col" class="p-3">المبلغ المدفوع حتى الان</th>
+                    <th scope="col" class="p-3">المبلغ المتبقى</th>
+                    <th scope="col" class="p-3">الحالة</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let courseData of tarineeTrainsactionData;let i=index" class="text-center">
-                    <td scope="row" class="p-3">{{i+1}}</td>
-                    <td class="p-3">{{courseData.courseName}}</td>
-                    <td class="p-3">{{courseData.courseCost}}</td>
-                    <td class="p-3">{{courseData.totalReceivedMoneyAmount}}</td>
-                    <td class="p-3">{{courseData.remainingMoneyAmount}}</td>
-                    <td class="p-3">{{courseData.paymentStatus}}</td>
+                  <tr
+                    *ngFor="
+                      let courseData of tarineeTrainsactionData;
+                      let i = index
+                    "
+                    class="text-center"
+                  >
+                    <td scope="row" class="p-3">{{ i + 1 }}</td>
+                    <td class="p-3">{{ courseData.courseName }}</td>
+                    <td class="p-3">{{ courseData.courseCost }}</td>
+                    <td class="p-3">
+                      {{ courseData.totalReceivedMoneyAmount }}
+                    </td>
+                    <td class="p-3">{{ courseData.remainingMoneyAmount }}</td>
+                    <td class="p-3">{{ courseData.paymentStatus }}</td>
                   </tr>
                 </tbody>
               </table>
@@ -37,30 +45,51 @@
             <div class="card-header text-white address">
               <h2 class="text-center">كشف حساب بالكورسات</h2>
             </div>
-            <div class="table-responsive  Rebresentive p-4">
+            <div class="table-responsive Rebresentive p-4">
               <table class="table text-center">
                 <thead class="text-primary">
                   <tr class="text-center">
-                  <th scope="col" class="p-3">م</th>
-                  <th scope="col" class="p-3">اسم الكورس</th>
-                  <th scope="col" class="p-3">تاريخ و وقت المعاملة</th>
-                  <th scope="col" class="p-3">المبلغ المستلم </th>
-                  <th scope="col" class="p-3">المستخدم القائم بالعملية</th>
-                  <th scope="col" class="p-3">ملاحظات</th>
-                  <th scope="col" class="p-3">حذف</th>
+                    <th scope="col" class="p-3">م</th>
+                    <th scope="col" class="p-3">اسم الكورس</th>
+                    <th scope="col" class="p-3">تاريخ و وقت المعاملة</th>
+                    <th scope="col" class="p-3">المبلغ المستلم</th>
+                    <th scope="col" class="p-3">المستخدم القائم بالعملية</th>
+                    <th scope="col" class="p-3">ملاحظات</th>
+                    <th scope="col" class="p-3">حذف</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let trainsactionData of AllTransactions;let i=index" class="text-center">
-                    <td scope="row" class="p-3">{{i+1}}</td>
-                    <td scope="row" class="p-3">{{trainsactionData.courseName}}</td>
-                    <td scope="row" class="p-3">{{trainsactionData.transactionDateTime}}</td>
-                    <td scope="row" class="p-3">{{trainsactionData.receivedMoneyAmount}}</td>
-                    <td scope="row" class="p-3">{{trainsactionData.dashboardUser}}</td>
-                    <td scope="row" class="p-3">{{trainsactionData.notes}}</td>
+                  <tr
+                    *ngFor="
+                      let trainsactionData of AllTransactions;
+                      let i = index
+                    "
+                    class="text-center"
+                  >
+                    <td scope="row" class="p-3">{{ i + 1 }}</td>
                     <td scope="row" class="p-3">
-                      <button class="btn btn-danger" (click)="Delete(trainsactionData.transactionId)">
-                      <i class="bi bi-trash3-fill"></i>حذف</button>
+                      {{ trainsactionData.courseName }}
+                    </td>
+                    <td scope="row" class="p-3">
+                      {{ trainsactionData.transactionDateTime }}
+                    </td>
+                    <td scope="row" class="p-3">
+                      {{ trainsactionData.receivedMoneyAmount }}
+                    </td>
+                    <td scope="row" class="p-3">
+                      {{ trainsactionData.dashboardUser }}
+                    </td>
+                    <td scope="row" class="p-3">
+                      {{ trainsactionData.notes }}
+                    </td>
+                    <td scope="row" class="p-3">
+                      <button
+                        class="btn btn-danger"
+                        (click)="Delete(trainsactionData.transactionId)"
+                      >
+                        <i class="bi bi-trash3-fill"></i>حذف
+                      </button>
+                    </td>
                   </tr>
                 </tbody>
               </table>
@@ -70,9 +99,7 @@
       </div>
     </div>
 
-
-
- <!---   <p class="p-3 d-flex justify-content-start">
+    <!---   <p class="p-3 d-flex justify-content-start">
       <button
       class="btn btn-outline-danger fs-4"
       type="button"
@@ -188,64 +215,108 @@
       aria-expanded="false"
       aria-controls="collapseExample"
     >
-      إضافة مادة جديده
-    </button>
+    اضافة حساب للطالب
+      </button>
   </p>
   <div class="collapse mt-5 Cardform" id="collapseExample">
-    <div class="card card-body ">
+    <div class="card card-body">
       <div class="main-content">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
               <div class="card-body">
-                <form [formGroup]="trainsacteForm" (submit)="formHandler($event)">
+                <form
+                  [formGroup]="trainsacteForm"
+                  (submit)="formHandler($event)"
+                >
                   <div class="mb-3">
                     <label for="branchSelect" class="form-label"
                       >اختر الفرع</label
                     >
-                    <select id="branchSelect"  class="form-select"  (change)="GetTranieeByBranchIdAll()"formControlName="branchSelect">
-                      <option *ngFor="let branche of branchs"[value]="branche.id">{{branche.name}}</option>
+                    <select
+                      id="branchSelect"
+                      class="form-select"
+                      (change)="GetTranieeByBranchIdAll()"
+                      formControlName="branchSelect"
+                    >
+                      <option
+                        *ngFor="let branche of branchs"
+                        [value]="branche.id"
+                      >
+                        {{ branche.name }}
+                      </option>
                     </select>
-                    <ng-container *ngIf="getbranchSelect.touched" >
-                        <div *ngIf="getbranchSelect.hasError('required')" id="subjectName" class="form-text text-danger  w-75">
-                          من فضلك ادخل الاسم المادة                                      </div>
-
-
-
+                    <ng-container *ngIf="getbranchSelect.touched">
+                      <div
+                        *ngIf="getbranchSelect.hasError('required')"
+                        id="subjectName"
+                        class="form-text text-danger w-75"
+                      >
+                        من فضلك ادخل الاسم المادة
+                      </div>
                     </ng-container>
                   </div>
-                 <ng-container >
-                  <div class="mb-3">
-                    <label for="studentNameSelected" class="form-label">اختر الاسم</label>
-                    <select id="studentNameSelected"  (change)="GetTranieeCourses()" class="form-select" formControlName="studentNameSelected">
-                        <option *ngFor="let tranieesBybranch of tranieesBybranch"[value]="tranieesBybranch.traineeId" >{{tranieesBybranch.arabicFullName}}</option>
-                    </select>
-                    <ng-container *ngIf="getstudentNameSelected.touched" >
-                        <div *ngIf="getstudentNameSelected.hasError('required')" id="studentNameSelected" class="form-text text-danger  w-75">
-                          من فضلك اختر اسم الطالب                                      </div>
-                    </ng-container>
-                  </div>
-
+                  <ng-container>
+                    <div class="mb-3">
+                      <label for="studentNameSelected" class="form-label"
+                        >اختر الاسم</label
+                      >
+                      <select
+                        id="studentNameSelected"
+                        (change)="GetTranieeCourses()"
+                        class="form-select"
+                        formControlName="studentNameSelected"
+                      >
+                        <option
+                          *ngFor="let tranieesBybranch of tranieesBybranch"
+                          [value]="tranieesBybranch.traineeId"
+                        >
+                          {{ tranieesBybranch.arabicFullName }}
+                        </option>
+                      </select>
+                      <ng-container *ngIf="getstudentNameSelected.touched">
+                        <div
+                          *ngIf="getstudentNameSelected.hasError('required')"
+                          id="studentNameSelected"
+                          class="form-text text-danger w-75"
+                        >
+                          من فضلك اختر اسم الطالب
+                        </div>
+                      </ng-container>
+                    </div>
 
                     <div class="mb-3">
-                        <label for="courseSelect" class="form-label"
-                          >اسم الكورس</label
+                      <label for="courseSelect" class="form-label"
+                        >اسم الكورس</label
+                      >
+
+                      <select
+                        id="courseSelect"
+                        class="form-select"
+                        formControlName="courseSelect"
+                      >
+                        <option
+                          *ngFor="let course of traineeCourses; let i = index"
+                          [value]="i"
                         >
-
-                        <select id="courseSelect"  class="form-select" formControlName="courseSelect">
-                          <option *ngFor="let course of traineeCourses; let i=index"  [value]="i">{{course.courseName}}</option>
-                        </select>
-                        <ng-container *ngIf="getcourseSelect.touched" >
-                            <div *ngIf="getcourseSelect.hasError('required')" id="courseSelect" class="form-text text-danger  w-75">
-                              من فضلك اختر اسم الكورس                                     </div>
-                        </ng-container>
-
-                      </div>
-                      <ng-container *ngFor="let course of traineeCourses">
+                          {{ course.courseName }}
+                        </option>
+                      </select>
+                      <ng-container *ngIf="getcourseSelect.touched">
+                        <div
+                          *ngIf="getcourseSelect.hasError('required')"
+                          id="courseSelect"
+                          class="form-text text-danger w-75"
+                        >
+                          من فضلك اختر اسم الكورس
+                        </div>
+                      </ng-container>
+                    </div>
+                    <ng-container *ngFor="let course of traineeCourses">
                       <div class="mb-3">
                         <label for="Remainingamount" class="form-label">
-                          المبلغ المستلم الان </label
-                        >
+                          المبلغ المستلم الان
+                        </label>
                         <input
                           type="input"
                           class="form-control"
@@ -253,17 +324,27 @@
                           formControlName="Theamountpaid"
                           aria-describedby="Theamountpaid"
                         />
-                        <ng-container *ngIf="getTheamountpaid.touched" >
-                            <div *ngIf="getTheamountpaid.hasError('required')" id="Remainingamount" class="form-text text-danger  w-75">
-                              من فضلك ادخل المبلغ المستلم                                      </div>
-                              <div *ngIf="getTheamountpaid.hasError('pattern')" id="Remainingamount" class="form-text text-danger  w-75">
-                                من فضلك ادخل المبلغ بالارقام                                     </div>
-                            </ng-container>
+                        <ng-container *ngIf="getTheamountpaid.touched">
+                          <div
+                            *ngIf="getTheamountpaid.hasError('required')"
+                            id="Remainingamount"
+                            class="form-text text-danger w-75"
+                          >
+                            من فضلك ادخل المبلغ المستلم
+                          </div>
+                          <div
+                            *ngIf="getTheamountpaid.hasError('pattern')"
+                            id="Remainingamount"
+                            class="form-text text-danger w-75"
+                          >
+                            من فضلك ادخل المبلغ بالارقام
+                          </div>
+                        </ng-container>
                       </div>
                       <div class="mb-3">
                         <label for="The amount paid" class="form-label">
-                         ملاحظات </label
-                        >
+                          ملاحظات
+                        </label>
                         <input
                           type="input"
                           class="form-control"
@@ -271,18 +352,32 @@
                           formControlName="notes"
                           aria-describedby="notes"
                         />
-
                       </div>
-                 </ng-container>
+                    </ng-container>
                   </ng-container>
 
-                  <button class="btn btn-primary ms-2" (click)="back()">تراجع</button>
-                  <button  [disabled]="!trainsacteForm.valid" class="btn btn-primary ms-2" (click)="addTrainsaction()">اضافة</button>
+                  <button
+                  (click)="back()"
+                  type="submit"
+                  class="btn btn-success m-2 pull-right float-start back bb"
+                >
+                  تراجع
+                </button>
+                  <button
+                  raised-button
+                    [disabled]="!trainsacteForm.valid"
+                    class="btn btn-danger m-2 pull-right float-start bb"
+                    (click)="addTrainsaction()"
+                  >
+                    اضافة
+                  </button>
                 </form>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+      
+  </div>
 </div>
-  </div>
