--- a/src/app/Components/courses/courses.component.html
+++ b/src/app/Components/courses/courses.component.html
@@ -75,7 +75,7 @@
         إضافة كورس جديد
       </button>
     </p>
-    <div class="collapse mt-5" id="collapseExample">
+    <div class="collapse mt-5" id="collapseExample" [ngClass]="{ 'show': flag }">
       <div class="card card-body Cardform">
         <div class="main-content">
           <div class="container-fluid">
