--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -96,8 +96,8 @@
       [routerLink]="['/studentcourse']" 
       [routerLinkActive]="' test '"
   [routerLinkActiveOptions]="{exact:true}"
-      class="nav-link px-0 bi bi-file-earmark-plus-fill"> 
-      اضافه كورس
+      class="nav-link px-2 bi bi-file-earmark-plus-fill"> 
+      اضافه كورس للطالب
   </a> </li>
   
   <li class="w-100   "> 
