--- a/src/app/Components/students/students.component.html
+++ b/src/app/Components/students/students.component.html
@@ -194,7 +194,7 @@
           إضافة طالب
         </button>
       </p>
-      <div class="collapse mt-5" id="collapseExample">
+      <div class="collapse mt-5" id="collapseExample"[ngClass]="{ 'show': flag }">
         <div class="card card-body">
           <div class="main-content">
             <div class="container-fluid">
