--- a/src/app/Components/branches/branches.component.html
+++ b/src/app/Components/branches/branches.component.html
@@ -66,208 +66,7 @@
       </div>
     </div>
 
-    <!--<p class="p-3 d-flex justify-content-start">
-    <button
-    class="btn btn-outline-danger fs-4"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#collapseExample"
-    aria-expanded="false"
-    aria-controls="collapseExample"
-  >
-       إضافة فرع
-</button>
-  </p>
-
-  <div class="collapse mt-5" id="collapseExample">
-    <div class="card card-body">
-      <div class="main-content mt-3">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card-body text-right fs-5">
-                <form [formGroup]="branchForm" (submit)="formHandelr($event)">
-                  <div class="row">
-                    <div class="col mb-3">
-                      <label for="branchname" class="form-label"
-                        >إسم الفرع</label
-                      >
-                      <input
-                        type="text"
-                        class="form-control"
-                        formControlName="branchName"
-                        id="branchname"
-                        aria-describedby="emailHelp"
-                      />
-                      <ng-container *ngIf="getBranchName.touched">
-                        <div
-                          *ngIf="getBranchName.hasError('required')"
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل اسم الفرع
-                        </div>
-                        <div
-                          *ngIf="getBranchName.hasError('minlength')"
-                          class="form-text text-danger"
-                        >
-                          لا يقل الاسم عن حرفين
-                        </div>
-                        <div
-                          *ngIf="getBranchName.hasError('maxlength')"
-                          class="form-text text-danger"
-                        >
-                          لا يزيد الاسم عن 15 حرف
-                        </div>
-                        <div
-                          *ngIf="getBranchName.hasError('pattern')"
-                          class="form-text text-danger"
-                        >
-                          ادخل حروف فقط
-                        </div>
-                      </ng-container>
-                    </div>
-                    <div class="col mb-3">
-                      <label for="branchsupervisor" class="form-label">
-                        اسم مشرف الفرع</label
-                      >
-                      <select
-                        id="disabledSelect"
-                        formControlName="supervisorName"
-                        class="form-select"
-                      >
-                        <option *ngFor="let x of users" [value]="x">
-                          {{ x }}
-                        </option>
-                      </select>
-
-                      <ng-container *ngIf="branchForm.touched">
-                        <div
-                          *ngIf="getSupervisorName.hasError('required')"
-                          class="form-text text-danger"
-                        >
-                          من فضلك اختر اسم مشرف الفرع
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col mb-3">
-                      <label for="phone" class="form-label"
-                        >التليفون المحمول</label
-                      >
-                      <input
-                        type="text"
-                        formControlName="supervisorPhoneNumber"
-                        class="form-control"
-                        id="phone"
-                        aria-describedby="emailHelp"
-                      />
-                      <ng-container *ngIf="getSupervisorPhoneNumber.touched">
-                        <div
-                          *ngIf="getSupervisorPhoneNumber.hasError('required')"
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل رقم التليفون المحمول
-                        </div>
-                        <div
-                          *ngIf="getSupervisorPhoneNumber.hasError('minlength')"
-                          class="form-text text-danger"
-                        >
-                          لا يقل الرقم عن 11 رقم
-                        </div>
-                        <div
-                          *ngIf="getSupervisorPhoneNumber.hasError('maxlength')"
-                          class="form-text text-danger"
-                        >
-                          لا يزيد الرقم عن 11 رقم
-                        </div>
-
-                        <div
-                          *ngIf="getSupervisorPhoneNumber.hasError('pattern')"
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل ارقام فقط تبداء ب 010/011/012
-                        </div>
-                      </ng-container>
-                    </div>
-                    <div class="col mb-3">
-                      <label for="homephone" class="form-label">
-                        التليفون الارضي
-                      </label>
-                      <input
-                        type="text"
-                        formControlName="supervisorLandlineNumber"
-                        class="form-control"
-                        id="homephone"
-                        aria-describedby="emailHelp"
-                      />
-                      <ng-container *ngIf="getSupervisorPhoneNumber.touched">
-                        <div
-                          *ngIf="
-                            getSupervisorLandlineNumber.hasError('required')
-                          "
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل رقم التليفون الارضي
-                        </div>
-                        <div
-                          *ngIf="
-                            getSupervisorLandlineNumber.hasError('minlength')
-                          "
-                          class="form-text text-danger"
-                        >
-                          لا يقل الرقم عن 8 أرقام
-                        </div>
-                        <div
-                          *ngIf="
-                            getSupervisorLandlineNumber.hasError('pattern')
-                          "
-                          class="form-text text-danger"
-                        >
-                          ادخل ارقام فقط
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-                  <button
-                    class="btn btn-primary ms-2 float-start back"
-                    (click)="back()"
-                  >
-                    تراجع
-                  </button>
-
-                  <button
-                    *ngIf="!isEdit"
-                    [disabled]="!branchForm.valid"
-                    class="btn btn-danger ms-2 float-start save"
-                    (click)="AddBranch()"
-                  >
-                    اضافة
-                  </button>
-                  <button
-                    *ngIf="isEdit"
-                    [disabled]="!branchForm.valid"
-                    class="btn ms-2 float-start color save"
-                    (click)="saveUpdate()"
-                  >
-                    حفظ
-                  </button>
-                </form>
-              </div>
-              <div class="d-flex gray">
-                <p class="px-2 home">
-                  <i class="fa-solid fa-house-chimney"></i>
-                </p>
-
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>-->
+  
     <p class="p-3 d-flex justify-content-center">
       <button
         class="btn btn-outline-danger fs-4"
@@ -280,7 +79,7 @@
         إضافة فرع جديد
       </button>
     </p>
-    <div class="collapse mt-5" id="collapseExample">
+    <div class="collapse mt-5" id="collapseExample" [ngClass]="{ 'show': isEdit }">
       <div class="card card-body">
         <div class="main-content">
           <div class="container-fluid">
