--- a/src/app/Components/groups/groups.component.html
+++ b/src/app/Components/groups/groups.component.html
@@ -104,7 +104,7 @@
     </button>
 </p>
 
-<div class="collapse Cardform" id="collapseExample">
+<div class="collapse Cardform" id="collapseExample" [ngClass]="{ 'show': showTable }">
     <div class="card card-body">
         <div class="main-content mt-1">
             <div class="container-fluid">
