--- a/src/app/Components/student-course/student-course.component.html
+++ b/src/app/Components/student-course/student-course.component.html
@@ -3,6 +3,141 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
+            <div class="card card-body">
+              <div class="card-header text-white address">
+                <h2 class="text-center">إضافة كورس للطالب</h2>
+              </div>
+              <div class="main-content">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="card-body">
+                        <form
+                          (submit)="formHandler($event)"
+                          [formGroup]="studentCourseForm"
+                        >
+                          <div class="mb-3">
+                            <label for="branchSelect" class="form-label"
+                              >بحث بالفرع</label
+                            >
+                            <select
+                              formControlName="branchName"
+                              id="branchSelect"
+                              class="form-select"
+                              (change)="getstudents()"
+                            >
+                              <option *ngFor="let branch of branches" [value]="branch.id">
+                                {{ branch.name }}
+                              </option>
+                            </select>
+                            <ng-container *ngIf="getBranchName.touched">
+                              <div
+                                *ngIf="getBranchName.hasError('required')"
+                                id="name"
+                                class="form-text text-danger"
+                              >
+                                من فضلك اختار اسم الفرع
+                              </div>
+                            </ng-container>
+                          </div>
+                          <div class="mb-3">
+                            <label for="nameSelect" class="form-label">بحث بالاسم</label>
+                            <select
+                              formControlName="studentName"
+                              id="nameSelect"
+                              class="form-select"
+                              (change)="getStudentById(); getStudentdCourse()"
+                            >
+                              <option
+                                *ngFor="let student of students"
+                                [value]="student.traineeId"
+                              >
+                                {{ student.arabicFullName }}
+                              </option>
+                            </select>
+                            <ng-container *ngIf="getStudentName.touched">
+                              <div
+                                *ngIf="getStudentName.hasError('required')"
+                                id="name"
+                                class="form-text text-danger"
+                              >
+                                من فضلك ادخل اسم الطالب
+                              </div>
+                            </ng-container>
+                          </div>
+                          <div class="mb-3">
+                            <label for="courseSelect" class="form-label"
+                              >اسم الكورس</label
+                            >
+                            <select
+                              formControlName="courseName"
+                              id="courseSelect"
+                              class="form-select"
+                            >
+                              <option
+                                *ngFor="let course of courses"
+                                [value]="course.courseId"
+                              >
+                                {{ course.courseName }}
+                              </option>
+                            </select>
+                            <ng-container *ngIf="getcourseName.touched">
+                              <div
+                                *ngIf="getcourseName.hasError('required')"
+                                id="name"
+                                class="form-text text-danger"
+                              >
+                                من فضلك ادخل اسم الكورس
+                              </div>
+                            </ng-container>
+                          </div>
+                          <div class="mb-3">
+                            <label for="time" class="form-label">تاريخ التقديم</label>
+                            <input
+                              type="date"
+                              formControlName="dateOfCourse"
+                              class="form-control"
+                              id="time"
+                              placeholder="يوم/شهر/سنة"
+                              aria-describedby="emailHelp"
+                            />
+                            <ng-container *ngIf="getdateOfCoursee.touched">
+                              <div
+                                *ngIf="getdateOfCoursee.hasError('required')"
+                                id="name"
+                                class="form-text text-danger"
+                              >
+                                من فضلك ادخل اسم تاريخ التقديم
+                              </div>
+                            </ng-container>
+                          </div>
+                          <button
+                            (click)="back()"
+                            class="btn btn-success ms-2 float-start back"
+                          >
+                            تراجع
+                          </button>
+                          <button
+                            [disabled]="!studentCourseForm.valid"
+                            class="btn btn-danger ms-2 float-start save"
+                            (click)="addStudentCourse()"
+                          >
+                            اضافة
+                          </button>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+<div class="collapse mt-5 Cardform" id="collapseExample" [ngClass]="{ 'show': showTable }">
           <div class="card mb-5">
             <div class="card-header text-white address">
               <h2 class="text-center">عرض بيانات الطالب</h2>
@@ -100,284 +235,4 @@
               </table>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- <p class="p-3 d-flex justify-content-start">
-        <button
-    class="btn btn-outline-danger fs-4"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#collapseExample"
-    aria-expanded="false"
-    aria-controls="collapseExample"
-  >
-       إضافة طالب
-  </button>
-      </p>
-
-      <div class="collapse mt-5" id="collapseExample">
-        <div class="card card-body">
-          <div class="main-content mt-3">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="card-body">
-          </div>
-          <div class="card-body text-righ fs-5">
-
-                    <form
-                    (submit)="formHandler($event)"
-                    [formGroup]="studentCourseForm"
-                  >
-                    <div class="mb-3">
-                      <label for="branchSelect" class="form-label"
-                        >بحث بالفرع</label
-                      >
-                      <select
-                        formControlName="branchName"
-                        id="branchSelect"
-                        class="form-select"
-                        (change)="getstudents()"
-                      >
-                        <option *ngFor="let branch of branches" [value]="branch.id">
-                          {{ branch.name }}
-                        </option>
-                      </select>
-                      <ng-container *ngIf="getBranchName.touched">
-                        <div
-                          *ngIf="getBranchName.hasError('required')"
-                          id="name"
-                          class="form-text text-danger"
-                        >
-                          من فضلك اختار اسم الفرع
-                        </div>
-                      </ng-container>
-                    </div>
-                    <div class="mb-3">
-                      <label for="nameSelect" class="form-label">بحث بالاسم</label>
-                      <select
-                        formControlName="studentName"
-                        id="nameSelect"
-                        class="form-select"
-                        (change)="getStudentById(); getStudentdCourse()"
-                      >
-                        <option
-                          *ngFor="let student of students"
-                          [value]="student.traineeId"
-                        >
-                          {{ student.arabicFullName }}
-                        </option>
-                      </select>
-                      <ng-container *ngIf="getStudentName.touched">
-                        <div
-                          *ngIf="getStudentName.hasError('required')"
-                          id="name"
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل اسم الطالب
-                        </div>
-                      </ng-container>
-                    </div>
-                    <div class="mb-3">
-                      <label for="courseSelect" class="form-label"
-                        >اسم الكورس</label
-                      >
-                      <select
-                        formControlName="courseName"
-                        id="courseSelect"
-                        class="form-select"
-                      >
-                        <option
-                          *ngFor="let course of courses"
-                          [value]="course.courseId"
-                        >
-                          {{ course.courseName }}
-                        </option>
-                      </select>
-                      <ng-container *ngIf="getcourseName.touched">
-                        <div
-                          *ngIf="getcourseName.hasError('required')"
-                          id="name"
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل اسم الكورس
-                        </div>
-                      </ng-container>
-                    </div>
-                    <div class="mb-3">
-                      <label for="time" class="form-label">تاريخ التقديم</label>
-                      <input
-                        type="date"
-                        formControlName="dateOfCourse"
-                        class="form-control"
-                        id="time"
-                        placeholder="يوم/شهر/سنة"
-                        aria-describedby="emailHelp"
-                      />
-                      <ng-container *ngIf="getdateOfCoursee.touched">
-                        <div
-                          *ngIf="getdateOfCoursee.hasError('required')"
-                          id="name"
-                          class="form-text text-danger"
-                        >
-                          من فضلك ادخل اسم تاريخ التقديم
-                        </div>
-                      </ng-container>
-                    </div>
-                    <button (click)="back()"class="btn btn-primary ms-2 float-start back">
-                      تراجع
-                    </button>
-                    <button
-                      [disabled]="!studentCourseForm.valid"
-                      class="btn btn-primary ms-2 float-start save"
-                      (click)="addStudentCourse()"
-                    >
-                      اضافة
-                    </button>
-                  </form>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-<p class="p-3 d-flex justify-content-center">
-  <button
-    class="btn btn-outline-danger fs-4"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#collapseExample"
-    aria-expanded="false"
-    aria-controls="collapseExample"
-  >
-    إضافة كورس لطالب
-  </button>
-</p>
-<div class="collapse mt-5 Cardform" id="collapseExample">
-  <div class="card card-body">
-    <div class="main-content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card-body">
-              <form
-                (submit)="formHandler($event)"
-                [formGroup]="studentCourseForm"
-              >
-                <div class="mb-3">
-                  <label for="branchSelect" class="form-label"
-                    >بحث بالفرع</label
-                  >
-                  <select
-                    formControlName="branchName"
-                    id="branchSelect"
-                    class="form-select"
-                    (change)="getstudents()"
-                  >
-                    <option *ngFor="let branch of branches" [value]="branch.id">
-                      {{ branch.name }}
-                    </option>
-                  </select>
-                  <ng-container *ngIf="getBranchName.touched">
-                    <div
-                      *ngIf="getBranchName.hasError('required')"
-                      id="name"
-                      class="form-text text-danger"
-                    >
-                      من فضلك اختار اسم الفرع
-                    </div>
-                  </ng-container>
-                </div>
-                <div class="mb-3">
-                  <label for="nameSelect" class="form-label">بحث بالاسم</label>
-                  <select
-                    formControlName="studentName"
-                    id="nameSelect"
-                    class="form-select"
-                    (change)="getStudentById(); getStudentdCourse()"
-                  >
-                    <option
-                      *ngFor="let student of students"
-                      [value]="student.traineeId"
-                    >
-                      {{ student.arabicFullName }}
-                    </option>
-                  </select>
-                  <ng-container *ngIf="getStudentName.touched">
-                    <div
-                      *ngIf="getStudentName.hasError('required')"
-                      id="name"
-                      class="form-text text-danger"
-                    >
-                      من فضلك ادخل اسم الطالب
-                    </div>
-                  </ng-container>
-                </div>
-                <div class="mb-3">
-                  <label for="courseSelect" class="form-label"
-                    >اسم الكورس</label
-                  >
-                  <select
-                    formControlName="courseName"
-                    id="courseSelect"
-                    class="form-select"
-                  >
-                    <option
-                      *ngFor="let course of courses"
-                      [value]="course.courseId"
-                    >
-                      {{ course.courseName }}
-                    </option>
-                  </select>
-                  <ng-container *ngIf="getcourseName.touched">
-                    <div
-                      *ngIf="getcourseName.hasError('required')"
-                      id="name"
-                      class="form-text text-danger"
-                    >
-                      من فضلك ادخل اسم الكورس
-                    </div>
-                  </ng-container>
-                </div>
-                <div class="mb-3">
-                  <label for="time" class="form-label">تاريخ التقديم</label>
-                  <input
-                    type="date"
-                    formControlName="dateOfCourse"
-                    class="form-control"
-                    id="time"
-                    placeholder="يوم/شهر/سنة"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getdateOfCoursee.touched">
-                    <div
-                      *ngIf="getdateOfCoursee.hasError('required')"
-                      id="name"
-                      class="form-text text-danger"
-                    >
-                      من فضلك ادخل اسم تاريخ التقديم
-                    </div>
-                  </ng-container>
-                </div>
-                <button
-                  (click)="back()"
-                  class="btn btn-primary ms-2 float-start back"
-                >
-                  تراجع
-                </button>
-                <button
-                  [disabled]="!studentCourseForm.valid"
-                  class="btn btn-primary ms-2 float-start save"
-                  (click)="addStudentCourse()"
-                >
-                  اضافة
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
