--- a/src/app/Components/subjects/subjects.component.html
+++ b/src/app/Components/subjects/subjects.component.html
@@ -3,54 +3,96 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <div class="card mb-5">
+          <div class="card card-body">
             <div class="card-header text-white address">
-              <h2 class="text-center">عرض المواد</h2>
+              <h2 class="text-center">إضافة مادة </h2>
             </div>
-
-            <div class="table-responsive">
-              <table class="table table-striped">
-                <thead>
-                  <tr class="text-center">
-                    <th>اسم المادة</th>
-                    <th>اسم الكورس التابعة له</th>
-                    <th>تعديل</th>
-                    <th>حذف</th>
-                  </tr>
-                </thead>
-
-                <tbody>
-                  <tr
-                    *ngFor="
-                      let subject of subjctByCrsId;
-                      let course;
-                      let i = index
-                    "
-                    class="text-center"
-                  >
-                    <td>{{ subject.subjectName }}</td>
-                    <td>{{ subject.courseName }}</td>
-
-                    <td>
-                      <button
-                        class="btn btn-warning"
-                        (click)="EditSubject(subject.subjectId)"
-                      >
-                        <i class="bi bi-pencil-square text-light"></i>
-                      </button>
-                    </td>
-
-                    <td>
-                      <button
-                        class="btn btn-danger"
-                        (click)="DeleteSubject(subject.subjectId)"
-                      >
-                        <i class="bi bi-trash3-fill"></i>
-                      </button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+            <div class="main-content">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card-body">
+                      <form [formGroup]="subjectForm" (submit)="formHandler($event)">
+                        <div class="mb-3">
+                          <label for="subjectName" class="form-label">إسم المادة</label>
+                          <input
+                            type="text"
+                            class="form-control"
+                            formControlName="subjectName"
+                            id="subjectName"
+                            aria-describedby="emailHelp"
+                          />
+                          <ng-container *ngIf="getSubjectName.touched">
+                            <div
+                              *ngIf="getSubjectName.hasError('required')"
+                              id="subjectName"
+                              class="form-text text-danger w-75"
+                            >
+                              من فضلك ادخل الاسم المادة
+                            </div>
+                            <div
+                              *ngIf="getSubjectName.hasError('minlength')"
+                              id="subjectName"
+                              class="form-text text-danger w-75"
+                            >
+                              لا يقل الاسم عن 3 حروف
+                            </div>
+                          </ng-container>
+                        </div>
+        
+                        <div class="mb-3">
+                          <label for="subjectCourse" class="form-label"
+                            >الاسم الكورسم المحتوي له</label
+                          >
+                          <select
+                            id="subjectCourse"
+                            class="form-select"
+                            formControlName="subjectCourse"
+                            (change)="loadSubjects()"
+                          >
+                            <option
+                              *ngFor="let course of Allcourses; let i = index"
+                              value="{{ course.courseId }}"
+                            >
+                              {{ course.courseName }}
+                            </option>
+                          </select>
+        
+                          <ng-container *ngIf="getSubjectName.touched">
+                            <div
+                              *ngIf="getSubjectCourse.hasError('required')"
+                              id="subjectName"
+                              class="form-text text-danger w-75"
+                            >
+                              من فضلك ادخل الكورس التابعه له المادة
+                            </div>
+                          </ng-container>
+                        </div>
+                        <button
+                        class="btn btn-success m-2 pull-right float-start back bb"
+                        (click)="back()"
+                        >
+                          تراجع
+                        </button>
+                        <button
+                          *ngIf="!isEdit"
+                          class="btn btn-danger m-2 pull-right float-start bb"
+                          (click)="AddSubject()"
+                        >
+                          اضافة
+                        </button>
+                        <button
+                          *ngIf="isEdit"
+                          class="btn btn-warning m-2 pull-right float-start bb"
+                          (click)="saveUpdate()"
+                        >
+                          تعديل
+                        </button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -183,7 +225,7 @@
           </div>
         </div>-->
 
-<p class="p-3 d-flex justify-content-center">
+<!-- <p class="p-3 d-flex justify-content-center">
   <button
     class="btn btn-outline-danger fs-4"
     type="button"
@@ -194,95 +236,57 @@
   >
     إضافة مادة جديده
   </button>
-</p>
-<div class="collapse mt-5 Cardform" id="collapseExample">
-  <div class="card card-body">
-    <div class="main-content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card-body">
-              <form [formGroup]="subjectForm" (submit)="formHandler($event)">
-                <div class="mb-3">
-                  <label for="subjectName" class="form-label">إسم المادة</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="subjectName"
-                    id="subjectName"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getSubjectName.touched">
-                    <div
-                      *ngIf="getSubjectName.hasError('required')"
-                      id="subjectName"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك ادخل الاسم المادة
-                    </div>
-                    <div
-                      *ngIf="getSubjectName.hasError('minlength')"
-                      id="subjectName"
-                      class="form-text text-danger w-75"
-                    >
-                      لا يقل الاسم عن 3 حروف
-                    </div>
-                  </ng-container>
-                </div>
+</p> -->
+<div class="collapse mt-5 Cardform" id="collapseExample" [ngClass]="{ 'show': showTable }">
 
-                <div class="mb-3">
-                  <label for="subjectCourse" class="form-label"
-                    >الاسم الكورسم المحتوي له</label
-                  >
-                  <select
-                    id="subjectCourse"
-                    class="form-select"
-                    formControlName="subjectCourse"
-                    (change)="loadSubjects()"
-                  >
-                    <option
-                      *ngFor="let course of Allcourses; let i = index"
-                      value="{{ course.courseId }}"
-                    >
-                      {{ course.courseName }}
-                    </option>
-                  </select>
+  <div class="card mb-5">
+    <div class="card-header text-white address">
+      <h2 class="text-center">عرض المواد التابعة للكورس</h2>
+    </div>
 
-                  <ng-container *ngIf="getSubjectName.touched">
-                    <div
-                      *ngIf="getSubjectCourse.hasError('required')"
-                      id="subjectName"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك ادخل الكورس التابعه له المادة
-                    </div>
-                  </ng-container>
-                </div>
-                <button
-                class="btn btn-success m-2 pull-right float-start back bb"
-                (click)="back()"
-                >
-                  تراجع
-                </button>
-                <button
-                  *ngIf="!isEdit"
-                  class="btn btn-danger m-2 pull-right float-start bb"
-                  (click)="AddSubject()"
-                >
-                  اضافة
-                </button>
-                <button
-                  *ngIf="isEdit"
-                  class="btn btn-warning m-2 pull-right float-start bb"
-                  (click)="saveUpdate()"
-                >
-                  تعديل
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr class="text-center">
+            <th>اسم المادة</th>
+            <th>اسم الكورس التابعة له</th>
+            <th>تعديل</th>
+            <th>حذف</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr
+            *ngFor="
+              let subject of subjctByCrsId;
+              let course;
+              let i = index
+            "
+            class="text-center"
+          >
+            <td>{{ subject.subjectName }}</td>
+            <td>{{ subject.courseName }}</td>
+
+            <td>
+              <button
+                class="btn btn-warning"
+                (click)="EditSubject(subject.subjectId)"
+              >
+                <i class="bi bi-pencil-square text-light"></i>
+              </button>
+            </td>
+
+            <td>
+              <button
+                class="btn btn-danger"
+                (click)="DeleteSubject(subject.subjectId)"
+              >
+                <i class="bi bi-trash3-fill"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
